feat(web): add service object view
